...
      }
    },
    "About ApuSeq" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Add FASTA from Clipboard" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Add Sequence" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Add Sequence..." : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Align with MAFFT" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "ApuSeq" : {
      "comment" : "Title of the print accessory controller.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Background Color" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Cancel" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Changes in Edit mode are autosaved." : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Clear Reference" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Copy Consensus" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Copy Current Sequence" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Copy Current Sequence as FASTA" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Copy Selection as FASTA" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Current Sequence" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Delete Current Sequence" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Display Order" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Enter Edit Mode" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "FASTA" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "File Format" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Font Size" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "General" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Identity Threshold" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Insert Gap Column" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Multiple sequence alignment program" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "OK" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Open Source Licenses" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Reference Sequence" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Remove All-Gap Columns" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Rename Current Sequence..." : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Reverse Complement" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Select" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Selected Sequences" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Sequence Type" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Sequences" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Set Current Sequence as Reference" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Sites" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Sort Sequences" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Translation" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Trim Trailing Gaps" : {
      "localizations" : {
        "ja" : {
...
