...
            .navigationTitle(AppStrings.openSourceLicenses)
    }
}

struct OpenSourceLicensesPane: View {
    private let mafftLicense = ThirdPartyLicense(
        name: "MAFFT",
        version: "7.526 (2024/Apr/26)",
        description: String(localized: "Multiple sequence alignment program"),
        copyright: "Copyright (c) 2006 Kazutaka Katoh",
        licenseName: "BSD License",
        websiteURL: URL(string: "https://mafft.cbrc.jp/alignment/software/")!,
        resourceName: "LICENSE-MAFFT"
...
